[package]
name = "winfuser"
version = "0.1.0"
edition = "2021"

[dependencies]
ntapi = "0.4.1"
tokio = { version = "1.43.0", features = ["full"] }
winapi = { version = "0.3.9", features = ["winuser", "handleapi", "processthreadsapi", "fileapi", "errhandlingapi", "sysinfoapi", "winbase", "ntdef", "processenv", "psapi", "memoryapi", "ntstatus"] }
